--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="container d-flex flex-wrap">
         <div class=" col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
             <p ><b>Branding | Image making </b></p>
-            <h1 class="display-1">Visual Designer</h1>
+            <h1 class="display-1 w">Visual Designer</h1>
             <p>This is a template Figma file, turned into code using Anima. 
                 Learn more at AnimaApp.com</p>
             <button class="btn btn-dark d-inline-block mt-5 p-3 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 rounded-0">Contact</button>
