--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
           </div>
     </section>
     <section>
-      <div class="text-center mt-5">
+      <div class="text-center mt-5 mb-5">
             <h1>Testimonial</h1>
       </div>
-      <div class="d-flex flex-wrap mt-5 col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 justify-content-center ">
-          <article class="  mt-5 ">                
-              <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                   <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+      <div class="d-flex flex-wrap justify-content-around  ">
+          <article class="flex-grow-1  mt-5  ">                
+              <div class=" p-4 F3F3F3  m-1 ">
+                   <h5>This is a template Figma  file,  <br> turned into code  <br>using Anima. Learn more <br> at AnimaApp.com</h5>
                   <div class="d-flex  mt-5">
                     <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                     <div>
@@ -167,9 +167,9 @@
                   </div>
               </div>
           </article>
-          <article class="  mt-5 ">                
-              <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                   <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+          <article class="flex-grow-1  mt-5  ">                
+              <div class=" p-4 F3F3F3  m-1 ">
+                   <h5>This is a template Figma  file,  <br> turned into code  <br>using Anima. Learn more <br> at AnimaApp.com</h5>
                   <div class="d-flex  mt-5">
                     <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                     <div>
@@ -185,9 +185,9 @@
                   </div>
               </div>
           </article>
-          <article class="  mt-5 ">                
-              <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                   <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+          <article class="flex-grow-1  mt-5  ">                
+              <div class=" p-4 F3F3F3  m-1 ">
+                   <h5>This is a template Figma  file,  <br> turned into code  <br>using Anima. Learn more <br> at AnimaApp.com</h5>
                   <div class="d-flex  mt-5">
                     <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                     <div>
@@ -203,9 +203,9 @@
                   </div>
               </div>
           </article>
-          <article class="  mt-5 ">                
-              <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                   <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+          <article class="flex-grow-1  mt-5  ">                
+              <div class=" p-4 F3F3F3  m-1 ">
+                   <h5>This is a template Figma  file,  <br> turned into code  <br>using Anima. Learn more <br> at AnimaApp.com</h5>
                   <div class="d-flex  mt-5">
                     <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                     <div>
@@ -221,9 +221,9 @@
                   </div>
               </div>
           </article>
-          <article class="  mt-5 ">                
-              <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                   <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+          <article class="flex-grow-1  mt-5  ">                
+              <div class=" p-4 F3F3F3  m-1 ">
+                   <h5>This is a template Figma  file,  <br> turned into code  <br>using Anima. Learn more <br> at AnimaApp.com</h5>
                   <div class="d-flex  mt-5">
                     <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                     <div>
@@ -239,9 +239,9 @@
                   </div>
               </div>
           </article>
-          <article class="  mt-5 ">                
-              <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                   <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+          <article class="flex-grow-1  mt-5  ">                
+              <div class=" p-4 F3F3F3  m-1 ">
+                   <h5>This is a template Figma  file,  <br> turned into code  <br>using Anima. Learn more <br> at AnimaApp.com</h5>
                   <div class="d-flex  mt-5">
                     <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                     <div>
@@ -261,7 +261,7 @@
           
 
       </div>
-    </section>  
+    </section>
     <footer class="container-fluid mt-100px pb-5 col-xl-12 col-lg-10 col-md-10 col-sm-10 col-12" > 
       <div class="row ">
         <div class="container col-xl-6 col-lg-6 col-md-8 col-sm-12 col-12">
