--- a/test.html
+++ b/test.html
@@ -80,10 +80,10 @@
         <div class="text-center mt-5">
               <h1>Testimonial</h1>
         </div>
-        <div class="d-flex flex-wrap mt-5 col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 justify-content-center ">
-            <article class="  mt-5 ">                
-                <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                     <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+        <div class="d-flex flex-wrap justify-content-around ">
+            <article class="flex-grow-1  mt-5  ">                
+                <div class=" p-4 F3F3F3  m-1 ">
+                     <h5>This is a template Figma  file,<br> turned into code <br>  brusing Anima. Learn more <br> at AnimaApp.com</h5>
                     <div class="d-flex  mt-5">
                       <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                       <div>
@@ -99,9 +99,9 @@
                     </div>
                 </div>
             </article>
-            <article class="  mt-5 ">                
-                <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                     <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+            <article class="flex-grow-1  mt-5  ">                
+                <div class=" p-4 F3F3F3  m-1 ">
+                     <h5>This is a template Figma  file,<br> turned into code <br>  brusing Anima. Learn more <br> at AnimaApp.com</h5>
                     <div class="d-flex  mt-5">
                       <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                       <div>
@@ -117,9 +117,9 @@
                     </div>
                 </div>
             </article>
-            <article class="  mt-5 ">                
-                <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                     <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+            <article class="flex-grow-1  mt-5  ">                
+                <div class=" p-4 F3F3F3  m-1 ">
+                     <h5>This is a template Figma  file,<br> turned into code <br>  brusing Anima. Learn more <br> at AnimaApp.com</h5>
                     <div class="d-flex  mt-5">
                       <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                       <div>
@@ -135,9 +135,9 @@
                     </div>
                 </div>
             </article>
-            <article class="  mt-5 ">                
-                <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                     <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+            <article class="flex-grow-1  mt-5  ">                
+                <div class=" p-4 F3F3F3  m-1 ">
+                     <h5>This is a template Figma  file,<br> turned into code <br>  brusing Anima. Learn more <br> at AnimaApp.com</h5>
                     <div class="d-flex  mt-5">
                       <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                       <div>
@@ -153,9 +153,9 @@
                     </div>
                 </div>
             </article>
-            <article class="  mt-5 ">                
-                <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                     <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+            <article class="flex-grow-1  mt-5  ">                
+                <div class=" p-4 F3F3F3  m-1 ">
+                     <h5>This is a template Figma  file,<br> turned into code <br>  brusing Anima. Learn more <br> at AnimaApp.com</h5>
                     <div class="d-flex  mt-5">
                       <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                       <div>
@@ -171,9 +171,9 @@
                     </div>
                 </div>
             </article>
-            <article class="  mt-5 ">                
-                <div class="flex-grow-1 p-4 F3F3F3  m-1 ">
-                     <h5>This is a template Figma cl file, turned into code <br> using Anima. Learn more <br> at AnimaApp.com</h5>
+            <article class="flex-grow-1  mt-5  ">                
+                <div class=" p-4 F3F3F3  m-1 ">
+                     <h5>This is a template Figma  file,<br> turned into code <br>  brusing Anima. Learn more <br> at AnimaApp.com</h5>
                     <div class="d-flex  mt-5">
                       <div class="mr-3"><img src="public/assetes/images/Client Image.png" alt="" class="img-fluid"></div>
                       <div>
